@@ -84,6 +84,8 @@ import com.openexchange.api2.OXException;
 import com.openexchange.groupware.IDGenerator;
 import com.openexchange.groupware.RdbUserConfigurationStorage;
 import com.openexchange.groupware.UserConfiguration;
+import com.openexchange.groupware.contact.helpers.ContactField;
+import com.openexchange.groupware.container.ContactObject;
 import com.openexchange.groupware.contexts.ContextException;
 import com.openexchange.groupware.delete.DeleteEvent;
 import com.openexchange.groupware.delete.DeleteFailedException;
@@ -522,7 +524,13 @@ public class OXUserMySQLStorage extends OXUserSQLStorage implements OXMySQLDefau
 
             // update last modified column
             changeLastModified(user_id, ctx, write_ox_con);
-
+            
+            if(usrdata.getDisplay_name()!=null){
+                //  update folder name via ox api if displayname was changed 
+                int[] changedfields = new int[]{ContactObject.DISPLAY_NAME};
+                OXFolderAdminHelper.propagateUserModification(user_id, changedfields, System.currentTimeMillis(), write_ox_con, write_ox_con, ctx.getId().intValue());
+            }
+            
             // fire up
             write_ox_con.commit();
         }catch (final DataTruncation dt){
@@ -598,6 +606,14 @@ public class OXUserMySQLStorage extends OXUserSQLStorage implements OXMySQLDefau
             }
             throw new StorageException(e);
         } catch (UnsupportedEncodingException e) {
+            log.error("Error", e);
+            try {
+                write_ox_con.rollback();
+            } catch (final SQLException e2) {
+                log.error("Error doing rollback", e2);
+            }
+            throw new StorageException(e);
+        } catch (OXException e) {
             log.error("Error", e);
             try {
                 write_ox_con.rollback();
